2009-04-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library revision.
	* NEWS, configure.ac:
	=== Version 0.2.2 ===

2009-04-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Check $datrie_cv_have_version_script against "yes",
	not "1", so symbol versioning works on GNU ld again.

2009-04-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.c (trie_state_copy): Use bitwise copy instead of
	member-wise.

2009-04-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Adjust variable name datrie_cv_have_version_script.

2009-04-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Support locale charset query with libcharset, for mac and mingw.
	[Thanks Beamer User for the report.]

	* configure.ac: Check for locale_charset() from libiconv and
	nl_langinfo(CODESET) from libc. If neither is present, ask user to
	install GNU libiconv.
	* tools/trietool.c (init_iconv): Use locale_charset() to query locale
	charset if possible, fall back to nl_langinfo(CODESET) otherwise.

2009-04-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Support alternative iconv implemetations.
	[Thanks cwt for the report.]

	* configure.ac: Check for GNU libconv or native libiconv if system libc
	doesn't have iconv().
	* tools/Makefile.am: Add ICONV_LIBS to linker options.

2009-04-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fall back to libtool for linkers that do not support -version-script.
	[Thanks bact' for the report. Thanks cwt for the test.]

	* configure.ac: Check whether linker supports -version-script.
	* datrie/Makefile.am, +datrie/libdatrie.def:
	Apply -version-script flag only when linker supports it. Otherwise,
	fall back to the old method based on libtool -export-symbols flag.

2009-04-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.
	* configure.ac (AC_CONFIG_MACRO_DIR), Makefile.am (ACLOCAL_AMFLAGS):